[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-cloud-sql-postgres-sqlalchemy"
version = "0.2.1"
description = "SQLAlchemy engine utilities for PostgreSQL and Google Cloud SQL"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Javad", email = "javad@example.com"}
]
keywords = ["sqlalchemy", "postgresql", "google-cloud-sql", "pg8000", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "sqlalchemy>=2.0.0",
    "pg8000>=1.30.0",
    "cloud-sql-python-connector[pg8000]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/javadebadi/google-cloud-sql-postgres-sqlalchemy"
Repository = "https://github.com/javadebadi/google-cloud-sql-postgres-sqlalchemy"

[tool.setuptools.packages.find]
where = ["."]
include = ["google_cloud_sql_postgres_sqlalchemy*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
google_cloud_sql_postgres_sqlalchemy = ["py.typed"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "build>=1.3.0",
    "invoke>=2.2.1",
    "mypy>=1.17.1,<1.18",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
    "twine>=6.0.0",
    "ty>=0.0.7",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort-like import sorting
    "ANN",  # Enforce type annotations
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "DTZ",  # flake8-datetimez
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "RUF",  # Ruff-specific rules
]
ignore = []

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = false
no_implicit_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pg8000.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.cloud.sql.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["google_cloud_sql_postgres_sqlalchemy"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
